# EarX

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  earx.jucer
JuceLibraryCode/: JuceHeader.h
Source/: AppState.cpp  AppState.h  AudioController.cpp  AudioController.h  DummySound.cpp  DummySound.h  EarxAudioEngineFFI.cpp  EarxAudioEngineFFI.h  EarxLookAndFeel.cpp  EarxLookAndFeel.h  IOSApp.cpp  IOSApp.h  InteractionController.cpp  InteractionController.h  LightIndicator.cpp  LightIndicator.h  Main.mm  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  PianoSound.cpp  PianoSound.h  PianoVoice.cpp  PianoVoice.h  PlaybackEngine.cpp  PlaybackEngine.h  SineVoice.cpp  SineVoice.h  SplashScreen.cpp  SplashScreen.h
Source/AccurateSalamanderGrandPianoV6.0_48khz16bit/48khz16bit_vel9_dry_flac/: 048_C3v09.flac  057_A3v09.flac  069_A4v09.flac  075_D#5v09.flac  081_A5v09.flac  084_C6v09.flac
Source/AccurateSalamanderGrandPianoV6.0_48khz16bit/sfz/: Accurate-SalamanderGrandPiano_flat.Recommended_vel9_dry_flac_48_84.sfz
build-ios/CMakeScripts/: ReRunCMake.make
build-ios/Earx.xcodeproj/: project.pbxproj
build-ios/Earx.xcodeproj/xcuserdata/arminjay.xcuserdatad/xcschemes/: xcschememanagement.plist
build-ios/Earx_artefacts/Debug/EarX.app.dSYM/Contents/: Info.plist
earxui/: README.md  pubspec.yaml
earxui/android/app/: build.gradle.kts
earxui/android/app/src/main/: AndroidManifest.xml
earxui/android/app/src/main/kotlin/com/example/earxui/: MainActivity.kt
earxui/assets/about/: ABOUT.txt
earxui/ios/: Gemfile  Podfile
earxui/ios/AccurateSalamanderGrandPianoV6.0_48khz16bit/48khz16bit_vel9_dry_flac/: 051_D#3v09.flac  054_F#3v09.flac  060_C4v09.flac  063_D#4v09.flac  066_F#4v09.flac  072_C5v09.flac  078_F#5v09.flac
earxui/ios/Flutter/: Debug.xcconfig  Release.xcconfig
earxui/ios/Runner/: AppDelegate.swift  EarxAudioEngineInit.c  Info.plist
earxui/ios/Runner.xcodeproj/: project.pbxproj  project.pbxproj.bak2  project.pbxproj.bak3
earxui/ios/Runner/Base.lproj/: LaunchScreen.storyboard
earxui/lib/: about_page.dart  audio_engine.dart  custom_page_transition.dart  localization.dart  main.dart  main_no_audio.dart  main_simple.dart  main_test.dart  note_name_selector.dart  onboarding.dart  onboarding_overlay.dart  settings_controller.dart  settings_ui.dart  splash_screen.dart  tutorial_manager.dart  wheel_dial.dart  wheel_dial_controller.dart  wheel_theme.dart
earxui/linux/: CMakeLists.txt
earxui/linux/runner/: my_application.cc
earxui/macos/Runner.xcodeproj/: project.pbxproj
earxui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
earxui/macos/Runner/Configs/: AppInfo.xcconfig
earxui/test/: widget_test.dart
earxui/web/: index.html  manifest.json
earxui/windows/: CMakeLists.txt
earxui/windows/runner/: Runner.rc  main.cpp
scripts/: build_ios_engine.sh
